[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inference-clt"
version = "0.1.0"
description = "Standalone inference and weight loading for pretrained CLT models." 
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "safetensors",
    "huggingface-hub",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/inference_clt"]
